k8s/base/ingress/ingress.yaml
# ToDo: cambiar esta url por una valida
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: videoclub-ingress
  
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - videoclub.example.com
      secretName: videoclub-tls-cert
  rules:
    - host: videoclub.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
